adding stress inventory

--- a/setting.ini
+++ b/setting.ini
@@ -1,6 +1,6 @@
 [config]
 protocal = http
-ip = 10.17.131.158
+ip = 10.17.131.113
 endpoint = restrci
 
 [readerinfo]
@@ -65,13 +65,27 @@ command_Driven = {"Cmd":"_GetTags","_StopCondition":1, "_StopValue":1}
                  -{"Cmd":"_GetTags","_StopCondition":3, "_StopValue":5}
                  -{"Cmd":"_GetTags","_StopCondition":3, "_StopValue":6}
 
+[inventoryCommands]
+commands =        {"Cmd":"_GetTags","_StopCondition":1, "_StopValue":4}
+                 -{"Cmd":"_GetTags","_StopCondition":2, "_StopValue":1000}
+                 -{"Cmd":"_GetTags","_StopCondition":2, "_StopValue":2000}
+                 -{"Cmd":"_GetTags","_StopCondition":2, "_StopValue":3000}
+                 -{"Cmd":"_GetTags","_StopCondition":2, "_StopValue":4000}
+                 -{"Cmd":"_GetTags","_StopCondition":2, "_StopValue":5000}
+                 -{"Cmd":"_GetTags","_StopCondition":2, "_StopValue":6000}
+                 -{"Cmd":"_GetTags","_StopCondition":3, "_StopValue":1}
+                 -{"Cmd":"_GetTags","_StopCondition":3, "_StopValue":2}
+                 -{"Cmd":"_GetTags","_StopCondition":3, "_StopValue":3}
+                 -{"Cmd":"_GetTags","_StopCondition":3, "_StopValue":4}
+                 -{"Cmd":"_GetTags","_StopCondition":3, "_StopValue":5}
+                 -{"Cmd":"_GetTags","_StopCondition":3, "_StopValue":6}
+
 
 [negative]
 negative_commands= {"Cmd": "GetInfo", "Fields": ["All","RdrModel"]}
                    -{"Cmd": "GetInfo", "Fields": ["RdModel"]}
                    -{"Cmd": "GetInfo", "Fields": ["All","RdrModel","RdrSN","Version"]}
                    -{"Cmd":"GetGPIOs","ReportNow":[5],"Type":"IN"}
-                   -{"Cmd":"GetGPIOs","ReportNow":[5],"Type":"OUT"}
                    -{"Cmd":"GetGPIOs","ReportNow":[5],"Type":"OUT"}
                    -{"Cmd":"SetGPIOs","GPIOs":[[5,true]]}
                    -{"Cmd":"SetGPIOs","GPIOs":[[1,false],[10,false],[3,false],[4,false]]}
