--- a/setting.ini
+++ b/setting.ini
@@ -1,11 +1,14 @@
 [config]
 protocal = http
-ip = 10.17.131.113
+ip = 10.17.131.158
 endpoint = restrci
+headder = [('Content-type', 'application/json')]
 
 [readerinfo]
-getinfo ={"Cmd":"GetInfo","Fields":["All"]}-{"Cmd": "GetInfo", "Fields": ["RdrSN"]}
-         -{"Cmd": "GetInfo", "Fields": ["RdrModel"]}-{"Cmd": "GetInfo", "Fields": ["Version"]}
+getinfo ={"Cmd":"GetInfo","Fields":["All"]}
+         -{"Cmd": "GetInfo", "Fields": ["RdrSN"]}
+         -{"Cmd": "GetInfo", "Fields": ["RdrModel"]}
+         -{"Cmd": "GetInfo", "Fields": ["Version"]}
          -{"Cmd": "GetInfo", "Fields": ["RdrModel","RdrSN","Version"]}
 [GPIO]
 GET_gpi={"Cmd":"GetGPIOs","ReportNow":[1,2,3,4],"Type":"IN"}
@@ -21,34 +24,77 @@ GET_gpi={"Cmd":"GetGPIOs","ReportNow":[1,2,3,4],"Type":"IN"}
         -{"Cmd":"SetGPIOs","GPIOs":[[1,false],[2,false],[3,false],[4,false]]}
         -{"Cmd":"SetGPIOs","GPIOs":[[1,true],[2,true],[3,true],[4,true]]}
         -{"Cmd":"SetGPIOs","GPIOs":[[1,false],[2,false],[3,false],[4,false]]}
-        -{"Cmd":"SetGPIOs","GPIOs":[[1,true]]}-{"Cmd":"SetGPIOs","GPIOs":[[2,true]]}
-        -{"Cmd":"SetGPIOs","GPIOs":[[3,true]]}-{"Cmd":"SetGPIOs","GPIOs":[[4,true]]}
+        -{"Cmd":"SetGPIOs","GPIOs":[[1,true]]}
+        -{"Cmd":"SetGPIOs","GPIOs":[[1,false],[2,false],[3,false],[4,false]]}
+        -{"Cmd":"SetGPIOs","GPIOs":[[2,true]]}
+        -{"Cmd":"SetGPIOs","GPIOs":[[1,false],[2,false],[3,false],[4,false]]}
+        -{"Cmd":"SetGPIOs","GPIOs":[[3,true]]}
+        -{"Cmd":"SetGPIOs","GPIOs":[[1,false],[2,false],[3,false],[4,false]]}
+        -{"Cmd":"SetGPIOs","GPIOs":[[4,true]]}
         -{"Cmd":"SetGPIOs","GPIOs":[[1,false],[2,false],[3,false],[4,false]]}
         -{"Cmd":"SetGPIOs","GPIOs":[[1,true],[2,true],[3,true],[4,true]]}
         -{"Cmd":"SetGPIOs","GPIOs":[[1,false],[2,false],[3,false],[4,false]]}
 
 [readercapabilities]
 GetCgf = {"Cmd":"GetCfg","Fields":["All"]}
-        -{"Cmd":"GetCfg","Fields":["Binary","SpotAnt","SpotDT","_PostTagEventsUrl","RdrName"]}
-        -{"Cmd":"GetCfg","Fields":["Binary","SpotDT","_PostTagEventsUrl","RdrName"]}
-        -{"Cmd":"GetCfg","Fields":["Binary","SpotAnt","SpotDT","RdrName","SpotPhase","SpotRSSI"]}
+         -{"Cmd":"GetCfg","Fields":["Binary","SpotAnt","SpotDT","_PostTagEventsUrl","RdrName"]}
+         -{"Cmd":"GetCfg","Fields":["Binary","SpotDT","_PostTagEventsUrl","RdrName"]}
+         -{"Cmd":"GetCfg","Fields":["Binary","SpotAnt","SpotDT","RdrName","SpotPhase","SpotRSSI"]}
+         -{"Cmd":"GetCfg","Fields":["Binary"]}
+         -{"Cmd":"GetCfg","Fields":["SpotAnt"]}
+         -{"Cmd":"GetCfg","Fields":["_PostTagEventsUrl"]}
+         -{"Cmd":"GetCfg","Fields":["RdrName"]}
+         -{"Cmd":"GetCfg","Fields":["ReportErrDesc"]}
+         -{"Cmd":"SetCfg","Binary":"HEX"}
+         -{"Cmd":"SetCfg","SpotAnt":true}
+         -{"Cmd":"SetCfg","SpotDT":true}
+         -{"Cmd":"SetCfg","SpotPhase":true}
+         -{"Cmd":"SetCfg","SpotRSSI":true}
+         -{"Cmd":"SetCfg","SpotRZ":true}
+         -{"Cmd":"SetCfg","_PostTagEventsUrl":"http://10.17.129.57:5000/"}
+         -{"Cmd":"SetCfg","ReportErrDesc": true}
+         -{"Cmd":"SetCfg","Binary":"HEX"}
+         -{"Cmd":"SetCfg","SpotAnt":false}
+         -{"Cmd":"SetCfg","SpotDT":false}
+         -{"Cmd":"SetCfg","SpotPhase":false}
+         -{"Cmd":"SetCfg","SpotRSSI":false}
+         -{"Cmd":"SetCfg","SpotRZ":false}
+         -{"Cmd":"SetCfg","_PostTagEventsUrl":""}
+         -{"Cmd":"SetCfg","ReportErrDesc": false}
+         -{"Cmd":"GetCfg","Fields":["ReportErrDesc"]}
+         -{"Cmd":"SetCfg","Binary":"HEX","SpotAnt":true,"SpotDT":true,"SpotPhase":true,"SpotRSSI":true,"SpotRZ":true, "_PostTagEventsUrl":"http://10.17.129.57:5000/","ReportErrDesc": true}
+         -{"Cmd":"GetCfg","Fields":["All"]}
+         -{"Cmd":"SetCfg","_PostTagEventsUrl":""}
+         -{"Cmd":"GetCfg","Fields":["_PostTagEventsUrl"]}
+
 
 [Getprof]
-set_get_profile = {"Cmd":"SetProf", "ID":1, "MBMask": [1,32,16,":FFFF","dddd"], "ReadZone":[1]}
-                  -{"Cmd":"SetProf", "ID":1, "MBMask": [1,32,16,":FFFF","dddd"], "ReadZone":[2]}
+set_get_profile ={"Cmd":"SetProf", "ID":1, "MBMask": [1,32,16,":FFFF","dddd"], "ReadZone":[1]}
+                  -{"Cmd":"SetProf", "ID":2, "MBMask": [1,32,16,":FFFF","dddd"], "ReadZone":[2]}
                   -{"Cmd":"GetProf",  "ID":1}-{"Cmd":"GetProf",  "ID":2}
+                  -{"Cmd":"SetProf", "ID":1, "MBMask": [], "ReadZone":[1]}
+                  -{"Cmd":"SetProf", "ID":2, "MBMask": [], "ReadZone":[2]}
+                  -{"Cmd":"SetProf", "ID":1, "MBMask": [1,32,16,":FFFF","dddd"], "ReadZone":[]}
+                  -{"Cmd":"SetProf", "ID":1, "MBMask": [1,32,16,":FFFF","dddd"], "ReadZone":[0]}
 
 [antenna]
 GET_SET_antenna = {"Cmd":"GetRZ", "ID":1}-{"Cmd":"GetRZ", "ID":2}
                   -{"Cmd":"GetRZ", "ID":4}-{"Cmd":"GetRZ", "ID":3}
                   -{"Cmd":"GetRZ", "ID":5}-{"Cmd":"GetRZ", "ID":6}
                   -{"Cmd":"GetRZ", "ID":7}-{"Cmd":"GetRZ", "ID":8}
-                  -{"Cmd":"SetRZ","ID":1,"Session": 0, "Q": 10, "Target": "A", "SelectFlag": "SL", "ReadPwr":200}
-                  -{"Cmd":"SetRZ","ID":1,"Session": 1, "Q": 10, "Target": "B", "SelectFlag": "~SL", "ReadPwr":200}
-                  -{"Cmd":"SetRZ","ID":2,"Session": 2, "Q": 10, "Target": "AB", "SelectFlag": "SL", "ReadPwr":100}
-                  -{"Cmd":"SetRZ","ID":1,"Session": 3}-{"Cmd":"SetRZ","ID":1,"Session": 1}
+                  -{"Cmd":"SetRZ","ID":1,"Session": 0, "Q": 10, "Target": "A", "SelectFlag": "SL", "ReadPwr":100}
+                  -{"Cmd":"SetRZ","ID":1,"Session": 1, "Q": 10, "Target": "B", "SelectFlag": "~SL", "ReadPwr":100}
+                  -{"Cmd":"SetRZ","ID":2,"Session": 2, "Q": 1, "Target": "AB", "SelectFlag": "SL", "ReadPwr":100}
+                  -{"Cmd":"SetRZ","ID":2,"Session": 3, "Q": 1000, "Target": "AB", "SelectFlag": "SL", "ReadPwr":100}
+                  -{"Cmd":"SetRZ","ID":2,"Session": 4, "Q": 50, "Target": "AB", "SelectFlag": "SL", "ReadPwr":100}
+                  -{"Cmd":"SetRZ","ID":1,"Session": 2, "Q": 10, "Target": "NONE", "SelectFlag": "NONE", "ReadPwr":100}
+                  -{"Cmd":"SetRZ","ID":2,"Session": 1, "Q": 10, "Target": "NONE", "SelectFlag": "NONE", "ReadPwr":100}
+                  -{"Cmd":"SetRZ","ID":3,"Session": 2, "Q": 10, "Target": "NONE", "SelectFlag": "NONE", "ReadPwr":100}
+                  -{"Cmd":"SetRZ","ID":4,"Session": 1, "Q": 10, "Target": "NONE", "SelectFlag": "NONE", "ReadPwr":100}
+                  -{"Cmd":"GetRZ", "ID":0}
+
 [inventory]
-command_Driven = {"Cmd":"_GetTags","_StopCondition":1, "_StopValue":1}
+command_Driven ={"Cmd":"_GetTags","_StopCondition":1, "_StopValue":1}
                  -{"Cmd":"_GetTags","_StopCondition":1, "_StopValue":2}
                  -{"Cmd":"_GetTags","_StopCondition":1, "_StopValue":3}
                  -{"Cmd":"_GetTags","_StopCondition":1, "_StopValue":4}
@@ -66,7 +112,7 @@ command_Driven = {"Cmd":"_GetTags","_StopCondition":1, "_StopValue":1}
                  -{"Cmd":"_GetTags","_StopCondition":3, "_StopValue":6}
 
 [inventoryCommands]
-commands =        {"Cmd":"_GetTags","_StopCondition":1, "_StopValue":4}
+commands = {"Cmd":"_GetTags","_StopCondition":1, "_StopValue":4}
                  -{"Cmd":"_GetTags","_StopCondition":2, "_StopValue":1000}
                  -{"Cmd":"_GetTags","_StopCondition":2, "_StopValue":2000}
                  -{"Cmd":"_GetTags","_StopCondition":2, "_StopValue":3000}
@@ -82,12 +128,120 @@ commands =        {"Cmd":"_GetTags","_StopCondition":1, "_StopValue":4}
 
 
 [negative]
-negative_commands= {"Cmd": "GetInfo", "Fields": ["All","RdrModel"]}
-                   -{"Cmd": "GetInfo", "Fields": ["RdModel"]}
-                   -{"Cmd": "GetInfo", "Fields": ["All","RdrModel","RdrSN","Version"]}
-                   -{"Cmd":"GetGPIOs","ReportNow":[5],"Type":"IN"}
-                   -{"Cmd":"GetGPIOs","ReportNow":[5],"Type":"OUT"}
-                   -{"Cmd":"SetGPIOs","GPIOs":[[5,true]]}
-                   -{"Cmd":"SetGPIOs","GPIOs":[[1,false],[10,false],[3,false],[4,false]]}
-                   -{"Cmd":"GetRZ", "ID":10}
-                   -{"Cmd":"_GetTags","_StopCondition": 3, "_StopValue":10}
+Not_supported_fields ={"Cmd":"GetInfo","fields":["All"]}
+                       -{"Cmd":"GetInfo","$Fields":["All"]}
+                       -{"Cmd":"GetGPIOs","reportNow":[1,2,3,4],"Type":"IN"}
+                       -{"Cmd":"GetGPIOs","$ReportNow":[1,2,3,4],"Type":"IN"}
+                       -{"Cmd":"GetGPIOs","ReportNow":[1,2,3,4],"type":"IN"}
+                       -{"Cmd":"GetGPIOs","ReportNow":[1,2,3,4],"$Type":"IN"}
+                       -{"Cmd":"SetGPIOs","gpios":[[1,false],[2,false],[3,false],[4,false]]}
+                       -{"Cmd":"SetGPIOs","$GPIOs":[[1,false],[2,false],[3,false],[4,false]]}
+                       -{"Cmd":"GetCfg","fields":["All"]}
+                       -{"Cmd":"GetCfg","$Fields":["All"]}
+                       -{"Cmd":"GetCfg","fields":["Binary","SpotAnt","SpotDT","_PostTagEventsUrl","RdrName"]}
+                       -{"Cmd":"GetCfg","$Fields":["Binary","SpotAnt","SpotDT","_PostTagEventsUrl","RdrName"]}
+                       -{"Cmd":"SetProf", "id":1, "MBMask": [1,32,16,":FFFF","dddd"], "ReadZone":[1]}
+                       -{"Cmd":"SetProf", "$ID":1, "MBMask": [1,32,16,":FFFF","dddd"], "ReadZone":[1]}
+                       -{"Cmd":"SetProf", "ID":1, "mbmask": [1,32,16,":FFFF","dddd"], "ReadZone":[1]}
+                       -{"Cmd":"SetProf", "ID":1, "$MBMask": [1,32,16,":FFFF","dddd"], "ReadZone":[1]}
+                       -{"Cmd":"SetProf", "ID":1, "MBMask": [1,32,16,":FFFF","dddd"], "readzone":[1]}
+                       -{"Cmd":"SetProf", "ID":1, "MBMask": [1,32,16,":FFFF","dddd"], "$ReadZone":[1]}
+                       -{"Cmd":"GetProf",  "id":1}
+                       -{"Cmd":"GetProf",  "$ID":1}
+                       -{"Cmd":"SetRZ","id":1,"Session": 0, "Q": 10, "Target": "A", "SelectFlag": "SL", "ReadPwr":100}
+                       -{"Cmd":"SetRZ","$ID":1,"Session": 0, "Q": 10, "Target": "A", "SelectFlag": "SL", "ReadPwr":100}
+                       -{"Cmd":"SetRZ","ID":1,"session": 0, "Q": 10, "Target": "A", "SelectFlag": "SL", "ReadPwr":100}
+                       -{"Cmd":"SetRZ","ID":1,"$Session": 0, "Q": 10, "Target": "A", "SelectFlag": "SL", "ReadPwr":100}
+                       -{"Cmd":"SetRZ","ID":1,"Session": 0, "q": 10, "Target": "A", "SelectFlag": "SL", "ReadPwr":100}
+                       -{"Cmd":"SetRZ","ID":1,"Session": 0, "$Q": 10, "Target": "A", "SelectFlag": "SL", "ReadPwr":100}
+                       -{"Cmd":"SetRZ","ID":1,"Session": 0, "Q": 10, "target": "A", "SelectFlag": "SL", "ReadPwr":100}
+                       -{"Cmd":"SetRZ","ID":1,"Session": 0, "Q": 10, "$Target": "A", "SelectFlag": "SL", "ReadPwr":100}
+                       -{"Cmd":"SetRZ","ID":1,"Session": 0, "Q": 10, "Target": "A", "selectflag": "SL", "ReadPwr":100}
+                       -{"Cmd":"SetRZ","ID":1,"Session": 0, "Q": 10, "Target": "A", "8SelectFlag": "SL", "ReadPwr":100}
+                       -{"Cmd":"SetRZ","ID":1,"Session": 0, "Q": 10, "Target": "A", "SelectFlag": "SL", "readpwr":100}
+                       -{"Cmd":"SetRZ","ID":1,"Session": 0, "Q": 10, "Target": "A", "SelectFlag": "SL", "(ReadPwr":100}
+                       -{"Cmd":"_GetTags","_stopsondition":1, "_StopValue":1}
+                       -{"Cmd":"_GetTags","_StopCondition0":1, "_StopValue":1}
+                       -{"Cmd":"_GetTags","_StopCondition":1, "_stopvalue":1}
+                       -{"Cmd":"_GetTags","_StopCondition":1, "_StopValue0":1}
+
+negative_commands = {"Cmd":"SetGPIOs","GPIOs":[[1,false],[10,false],[3,false],[4,false]]}
+                    -{"Cmd":"GetProf",  "ID":0}
+                    -{"Cmd":"GetGPIOs","ReportNow":[10],"Type":"IN"}
+                    -{"Cmd":"GetGPIOs","ReportNow":[1,10],"Type":"IN"}
+                    -{"Cmd":"SetProf", "ID":0, "MBMask": [1,32,16,":FFFF","dddd"], "ReadZone":[1]}
+                    -{"Cmd":"SetProf", "ID":33, "MBMask": [1,32,16,":FFFF","dddd"], "ReadZone":[1]}
+                    -{"Cmd":"SetProf", "ID":1, "MBMask": [1,32,16,":FFFF","xyzz"], "ReadZone":[1]}
+                    -{"Cmd":"SetProf", "ID":1, "MBMask": [1,32,16,":FFFF","dd"], "ReadZone":[1]}
+
+                    -{"Cmd":"SetRZ","ID":1,"Session": 0, "Q": 9999999999999, "Target": "A", "SelectFlag": "SL", "ReadPwr":100}
+                    -{"Cmd":"SetRZ","ID":1,"Session": 0, "Q": 10, "Target": "A", "SelectFlag": "SL", "ReadPwr":200}
+
+
+Bad_message = {"Cmd":"_GetTags","_StopCondition":1, "_StopValue":a}
+
+
+Not_supported_field_values= {"Cmd": "GetInfo", "Fields": ["All","RdrModel"]}
+                -{"Cmd":"GetInfo","Fields":["All0"]}
+                -{"Cmd":"GetInfo","Fields":["rdrmodel"]}
+                -{"Cmd":"GetInfo","Fields":["rdrSN"]}
+                -{"Cmd":"GetInfo","Fields":["version"]}
+                -{"Cmd": "GetInfo", "Fields": ["RdrModel0","RdrSN","Version"]}
+                -{"Cmd": "GetInfo", "Fields": ["RdrModel","rdrSN","Version"]}
+                -{"Cmd": "GetInfo", "Fields": ["RdrModel","RdrSN","version"]}
+                -{"Cmd":"GetInfo","Fields":[]}-{"Cmd":"GetGPIOs","ReportNow":[A],"Type":"IN"}
+                -{"Cmd":"GetGPIOs","ReportNow":[1,2,3,4],"Type":"in"}
+                -{"Cmd":"GetGPIOs","ReportNow":[1,2,3,4],"Type":"IN0"}-{"Cmd":"GetGPIOs","ReportNow":[10],"Type":"OUT"}
+                -{"Cmd":"GetGPIOs","ReportNow":[1,2,3,10],"Type":"OUT"}
+                -{"Cmd":"GetGPIOs","ReportNow":[1,2,3,4],"Type":"out"}
+                -{"Cmd":"GetGPIOs","ReportNow":[1,2,3,4],"Type":"OUT0"}
+                -{"Cmd":"SetGPIOs","GPIOs":[[1,true0]]}
+                -{"Cmd":"SetGPIOs","GPIOs":[[10,true]]}
+                -{"Cmd":"SetGPIOs","GPIOs":[[1,false],[2,false],[3,false],[10,false]]}
+                -{"Cmd":"GetCfg","Fields":["All0"]}
+                -{"Cmd":"GetCfg","Fields":["binary"]}
+                -{"Cmd":"GetCfg","Fields":["spotant"]}
+                -{"Cmd":"GetCfg","Fields":["_postTageventsUrl"]}
+                -{"Cmd":"GetCfg","Fields":["rdrname"]}
+                -{"Cmd":"GetCfg","Fields":["reporterrDesc"]}
+                -{"Cmd":"GetCfg","Fields":["spotphase"]}
+                -{"Cmd":"GetCfg","Fields":["spotrSSI"]}
+                -{"Cmd":"GetCfg","Fields":["spotdt"]}
+                -{"Cmd":"GetCfg","Fields":[]}
+                -{"Cmd":"GetCfg","Fields":["binary","SpotAnt","SpotDT","_PostTagEventsUrl","RdrName","SpotPhase","SpotRSSI"]}
+                -{"Cmd":"GetCfg","Fields":["Binary","SpotAnt","spotDT","_PostTagEventsUrl","RdrName"]}
+                -{"Cmd":"SetCfg","Binary":"hex"}
+                -{"Cmd":"SetCfg","SpotAnt":True}
+                            -{"Cmd":"SetCfg","SpotDT":True}
+                -{"Cmd":"SetCfg","SpotPhase":True}
+                -{"Cmd":"SetCfg","SpotRSSI":True}
+                            -{"Cmd":"SetCfg","SpotRZ":False}
+                -{"Cmd":"SetCfg","ReportErrDesc": _true}
+                -{"Cmd":"SetCfg","Binary":"HEX","SpotAnt":true0,"SpotDT":false,"SpotPhase":false,"SpotRSSI":false,"SpotRZ":true, "_PostTagEventsUrl":"http://10.17.129.57:5000/","ReportErrDesc": true}
+                            -{"Cmd":"GetProf",  "ID":A}-{"Cmd":"GetProf",  "ID":510}
+                            -{"Cmd":"SetProf", "ID":A, "MBMask": [1,32,16,":FFFF","dddd"], "ReadZone":[1]}
+                -{"Cmd":"SetProf", "ID":1, "MBMask": [6,32,16,":FFFF","dddd"], "ReadZone":[1]}
+                -{"Cmd":"SetProf", "ID":1, "MBMask": [1,99,16,":FFFF","dddd"], "ReadZone":[1]}
+                -{"Cmd":"SetProf", "ID":1, "MBMask": [1,32,999,":FFFF","dddd"], "ReadZone":[1]}
+                -{"Cmd":"SetProf", "ID":1, "MBMask": [1,32,16,":gggg","dddd"], "ReadZone":[1]}
+                -{"Cmd":"SetProf", "ID":1, "MBMask": [1,32,16,":FFii","dddd"], "ReadZone":[1]}
+                            -{"Cmd":"SetProf", "ID":1, "MBMask": [1,32,16,":FFFF","dddd"], "ReadZone":[A]}
+                -{"Cmd":"SetProf", "ID":1, "MBMask": [1,32,16,":FFFF","dddd"], "ReadZone":[10]}
+                -{"Cmd":"GetRZ", "ID":9}
+                -{"Cmd":"GetRZ", "ID":10}
+                            -{"Cmd":"SetRZ","ID":9,"Session": 0, "Q": 10, "Target": "A", "SelectFlag": "SL", "ReadPwr":100}
+                            -{"Cmd":"SetRZ","ID":1,"Session": 5, "Q": 10, "Target": "A", "SelectFlag": "SL", "ReadPwr":100}
+                            -{"Cmd":"SetRZ","ID":1,"Session": 0, "Q": 10, "Target": "0", "SelectFlag": "SL", "ReadPwr":100}
+                -{"Cmd":"SetRZ","ID":1,"Session": 0, "Q": 10, "Target": 1, "SelectFlag": "SL", "ReadPwr":100}
+                -{"Cmd":"SetRZ","ID":1,"Session": 0, "Q": 10, "Target": "a", "SelectFlag": "SL", "ReadPwr":100}
+                -{"Cmd":"SetRZ","ID":1,"Session": 0, "Q": 10, "Target": "A", "SelectFlag": "0", "ReadPwr":100}
+                -{"Cmd":"SetRZ","ID":1,"Session": 0, "Q": 10, "Target": "A", "SelectFlag": sl, "ReadPwr":100}
+                -{"Cmd":"SetRZ","ID":1,"Session": 0, "Q": 10, "Target": "A", "SelectFlag": "sl", "ReadPwr":100}
+                -{"Cmd":"SetRZ","ID":1,"Session": 0, "Q": 10, "Target": "A", "SelectFlag": "SL", "ReadPwr":0}
+                -{"Cmd":"_GetTags","_StopCondition":0, "_StopValue":1}
+                            -{"Cmd":"_GetTags","_StopCondition":1, "_StopValue":"a"}
+                -{"Cmd":"_GetTags","_StopCondition":2, "_StopValue":9000}
+                -{"Cmd":"_GetTags","_StopCondition":2, "_StopValue":"9"}
+                -{"Cmd":"_GetTags","_StopCondition":3, "_StopValue":10}
+                -{"Cmd":"_GetTags","_StopCondition":2, "_StopValue":"10"}
+
